<resources>
    <string name="app_name">E-TPS Pay</string>
    <string name="card_payment">Card Payment</string>
    <string name="history">Transaction History</string>
    <string name="print_EOD">Print EOD Receipt</string>
    <string name="user_settings">User Preferences</string>
    <string name="business_name">Business Name</string>
    <string name="business_email">Business E-mail</string>
    <string name="pin_management">PIN Management</string>
    <string name="change_of_pin">Operator PIN</string>
    <string name="change_supervisor_pin">Supervisor PIN</string>
    <string name="change_admin_pin">Admin PIN</string>
    <string name="actions">Actions</string>
    <string name="EOD">End Of Day</string>
    <string name="re_print_receipt">Re-print Receipt</string>
    <string name="print_transaction_history">Print Transaction History</string>
    <string name="close_batch">Close Batch</string>
    <string name="clear_database">Clear Database</string>
    <string name="system">System</string>
    <string name="cloud">Cloud Database URI</string>
    <string name="check_updates">Check For Software Updates</string>

    <!--<string name="pref_show_treble_key" translatable="false">show_treble</string>-->
    <!-- Summary for Checkboxes -->
    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>

    <!-- Key name for storing business name in SharedPreferences -->
    <string name="pref_business_name_key" translatable="false">business_name</string>
    <!-- Key name for storing business email in SharedPreferences -->
    <string name="pref_business_email_key" translatable="false">business_email</string>
    <!-- Key name for storing operator pin in SharedPreferences -->
    <string name="pref_operator_pin_key" translatable="false">operator_pin</string>
    <!-- Key name for storing supervisor pin in SharedPreferences -->
    <string name="pref_supervisor_pin_key" translatable="false">supervisor_pin</string>
    <!-- Key name for storing business name in SharedPreferences -->
    <string name="pref_admin_pin_key" translatable="false">admin_pin</string>
    <!-- Key name for storing end of day in SharedPreferences -->
    <string name="pref_end_of_day_key" translatable="false">end_of_day</string>
    <!-- Key name for storing print end of day in SharedPreferences -->
    <string name="pref_print_end_of_day_key" translatable="false">print_end_of_day_receipt</string>
    <!-- Key name for storing re print receipt in SharedPreferences -->
    <string name="pref_re_print_receipt_key" translatable="false">re_print_receipt</string>
    <!-- Key name for storing transaction history in SharedPreferences -->
    <string name="pref_transaction_history_key" translatable="false">print_transaction_history</string>
    <!-- Key name for storing close batch in SharedPreferences -->
    <string name="pref_close_batch_key" translatable="false">close_batch</string>
    <!-- Key name for storing clear database in SharedPreferences -->
    <string name="pref_clear_database_key" translatable="false">clear_database</string>
    <string name="msg_no_notes">No Recent Transaction has been carried out on this terminal</string>

    <string name="enter_pin">Enter PIN</string>
    <string name="old_pin">Please enter old PIN</string>
    <string name="new_pin">Enter your new PIN</string>
    <string name="confirm_pin">Confirm your new PIN</string>
    <string name="logo">LOGO</string>
    <string name="loading_setup">Loading setup... Please wait</string>
    <string name="hello">Hello!</string>
    <string name="payments">Payments</string>
    <string name="last_transact">Previous Transaction</string>
    <string name="amt">Amount</string>
    <string name="user_mgt">User Management</string>
    <string name="title_activity_login">Authentication</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">PIN</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">PIN must be 6 digits long</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_in">Sign In</string>
    <string name="dashboard">Dashboard</string>
    <string name="wallet_payment">Wallet Payment</string>
    <string name="ussd">USSD Payment</string>
    <string name="transactions">Transactions</string>
    <string name="suc_trans">Successful Transactions</string>
    <string name="print_count">Receipts Printed</string>
    <string name="proc_by_user">You\'ve Processed</string>
    <string name="log_as">Logged In as</string>
    <string name="perm_lev">Permission Level</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_main_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_info">Manage application behaviour and configuration</string>
    <string name="dev_mgt">Device Management</string>
    <string name="user_mgt_info">Manage user accounts and more</string>
    <string name="dev_mgt_info">Set-up terminal communication</string>
    <string name="db_mgt">Database Management</string>
    <string name="db_mgt_info">Manage database records</string>
    <string name="speech_syn">Speech Synthesis</string>
    <string name="tog">Toggle</string>
    <string name="speech_syn_info">Speech synthesis, when enabled, gives the app a voice. This helps to give the user an audio feedback on certain key operations.</string>
    <string name="data_sync">Synchronization &amp; Updates</string>
    <string name="syn_info">Synchronize device data</string>
    <string name="title_activity_user_mgt">User Manager</string>
    <string name="add_user">Add User Account</string>
    <string name="fullname">Full name</string>
    <string name="user_name">Username</string>
    <string name="_6Pins">6-digit PIN</string>
    <string name="username">Username</string>

    <string name="title_activity_user_profile">User Profile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="view_processed_transactions">View Processed Transactions</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_pwd">Change Password</string>
    <string name="update_password">Update Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change</string>
    <string name="host_config">Host Configuration</string>
    <string name="key_config">Key Configuration</string>
    <string name="subtitle1">Manage Host Configuration</string>
    <string name="subtitle2">Change Key</string>
    <string name="terminal_Id">Terminal ID</string>
    <string name="subtitle3">Check Terminal ID</string>
    <string name="epms">EPMS Configuration</string>
    <string name="subtitle4">Configure EPMS settings</string>
    <string name="prep_terminal">Prep Terminal</string>
    <string name="subtitle5">Prep Terminal</string>
    <string name="download_param">Download Parameter</string>
    <string name="subtitle6">Get the download param</string>
    <string name="download_key">Download Key</string>
    <string name="subtitle7">Get New Download Keys</string>
    <string name="print_config">Print Configuration</string>
    <string name="subtitle8">Print Configuration Setting</string>
    <string name="biz_name">Business Name</string>
    <string name="subtitle9">Check Business Name</string>
    <string name="biz_email">Business Email</string>
    <string name="subtitle10">Check Business Email</string>
    <string name="subtitle11">Clear all transaction entries</string>
    <string name="clear_batch">Clear Batch</string>
    <string name="subtitle12">Clear all batch transaction entries</string>
    <string name="cloud_database">Cloud Database</string>
    <string name="subtitle13">Fetch cloud database</string>
</resources>
