<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_abstract_3"
    tools:context=".ui.preferences.UserProfileActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/black_transparent_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/userProfileEditBtn"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/logo"
        android:elevation="10dp"
        android:onClick="showUpdateProfileDialog"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="72dp"
        android:layout_height="73dp"
        android:layout_marginTop="164dp"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/midnightBlue"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/userProfileAvatarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="E"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/grey_lighten_3"
                android:textSize="36sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:elevation="-1dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userProfileFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/fullname"
                android:textAlignment="center"
                android:textColor="@color/midnightBlue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userProfileUserNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/userProfilePermLevelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/perm_lev"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/userProfileViewTransBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_history_deep_blue_64dp"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/view_processed_transactions"
                android:textAllCaps="false"
                android:textColor="@color/nightly_blue"
                android:textSize="18sp" />

            <Button
                android:id="@+id/userProfileChgPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:onClick="showUpdatePasswordDialog"
                android:text="@string/change_pwd"
                android:textAllCaps="false"
                android:textColor="@color/nightly_blue"
                android:textSize="18sp" />

            <Button
                android:id="@+id/userProfileViewTransBtn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/peach_pink"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_delete_sweep_black_24dp"
                android:drawablePadding="10dp"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:onClick="showDelUserDialog"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/delete_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>